--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+alembic==1.18.4
 Flask==3.1.3
+Flask_Migrate==4.1.0
+flask_sqlalchemy==3.1.1
 flask_wtf==1.2.2
 injector==0.24.0
-openai==2.23.0
+openai==2.24.0
 pytest==9.0.2
 python-dotenv==1.2.1
 WTForms==3.2.1
